<resources>
    <string name="app_name">Торты и десерты</string>
    <string name="textcategorii">Категории</string>
    <string name="buttonrulet">Рулеты</string>
    <string name="buttontort">Торты</string>
    <string name="buttonpirog">Пироги</string>
    <string name="buttonkeks">Кексы</string>
    <string name="buttonpirognoe">пирожные</string>
    <string name="textcupcakes">Кексы</string>
    <string name="textrolls">Рулеты</string>
    <string name="textview">пирожные</string>
    <string name="buttonpies">пироги</string>
    <string name="text">торты</string>
    <string name="textvtort">Торты</string>
    <string name="buttonmramor">Торт\"Мраморный\"</string>
    <string name="buttonpr">Торт\"Пряничный\"</string>
    <string name="buttonsmetannik">Торт\"Сметанник\"</string>
    <string name="buttonsnikers">Торт\"Сникерс\"</string>
    <string name="button">Торт\"Тирамису\"</string>
    <string name="textpirogi">Пироги</string>
    <string name="buttonmechta">Пирог\"Мечта\"</string>
    <string name="buttonapelsinoviy">Пирог\"Персиковый\"</string>
    <string name="buttonvishny">Пирог\"Яблочный с миндалём\"</string>
    <string name="buttonvishnyу">Пирог\"Вишнёвый\"</string>
    <string name="buttonavocado">Пирог с авокадо</string>
    <string name="buttonmafina">Банановые маффины</string>
    <string name="buttonvanil">Ванильный кекс</string>
    <string name="buttonoreh">Бынановый с орехом</string>
    <string name="buttonrojdestv">Рождественнский кекс</string>
    <string name="buttontvorogn">Творожный кекс</string>
    <string name="textviewpirogn">Пирожные</string>
    <string name="buttonamac">Рулет с маком</string>
    <string name="buttonazavarnoe">Заварное пирожное</string>
    <string name="buttonbaunty">Пирожное \"Баунти\"</string>
    <string name="buttoncartoshka">Пирожное \"картошка\"</string>
    <string name="buttonbushe">Пирожное \"Буше\"</string>
    <string name="buttoncinder">Пирожное \"Киндер Дэлис\"</string>
    <string name="buttonnejenka">Рулет \"Неженка\"</string>
    <string name="buttonmac">Ореховый рулет</string>
    <string name="buttonpraga">Рулет \"Пражский\"</string>
    <string name="buttonsmetanniy">Рулет со сметанным кремом</string>
    <string name="textrecept">"Ингредиенты:
        Яйцо  — 6 Штук
        Сахарная пудра  — 280 Грамм (200г - в тесто, 80г - в сливочный крем)
        Мука  — 225 Грамм
        Сливки 33%  — 180 Миллилитров (60мл - в сливочный крем, 120мл - для украшения)
        Шоколад белый  — 230 Грамм (150г - в сливочный крем, 80г - для украшения)
        Сливочное масло  — 220 Грамм (20г - для смазки формы, 200г - в сливочный крем)
        Шоколад молочный  — 80 Грамм
        Шоколад тёмный  — 80 Грамм
        Миндальные хлопья  — 200 Грамм
        Вода горячая  — 100 Миллилитров
        Сахар  — 2 Ст. ложки
        Сок лимона  — 1 Ст. ложка
        Чай чёрный  — 1 Штука (пакетик)
        Приготовление :
        1)Для начала сделайте тесто. Яйца взбейте с сахарной пудрой миксером. Затем добавьте к массе просеянную муку. Замешайте тесто. Влейте его в смазанную маслом форму. Выпекайте корж в течение 25 минут при 180 градусах. Остудите его.
        2)Приготовьте крем. Белый шоколад со сливками растопите на водяной бане. Остудите массу, а потом взбейте её.
        3)Потом взбейте мягкое сливочное масло с сахарной пудрой, около 15 минут. Введите шоколадную массу в сливочную. Хорошо перемешайте крем.
        4)Для пропитки заварите крепкий чай с лимонным соком и сахаром. Корж разрежьте на 3 части. Каждую пропитайте чаем.
        5)Далее смажьте коржи кремом, выкладывая их друг на друга. Крем оставьте также для украшения.
        6)Теперь сделайте украшения для торта. Первое: растопите молочный шоколад с 1/3 сливок. Второе: растопите белый шоколад с 1/3 сливок. Третье: растопите тёмный шоколад с 1/3 сливок. Каждую массу взбейте.
        7)Хаотично распределите шоколадные массы по верхушке торта. Сделайте \"мраморный эффект\" с помощью зубочистки.
        8)Оставьте торт на пару часов в холодильнике. Приятного вам чаепития "</string>
    <string name="textingridient">"Ингридиенты:
        шоколадные пряники 0,5 кг
        сметана 0,7-1 литр
        сахар примерно 4-5 ст.л. (во вкусу должен получиться не очень сладкий крем, но и не кислый)
        2 банана
        Приготовление:
        1)Каждый пряник разрезать на 3 кружочка, банан также нарезать кружочками, в сметану положить сахар, но так, чтобы она была не очень сладкая, и взбить.
        2)Небольшую кастрюльку изнутри выстелить прозрачной клеенкой (можно обычный прозрачный целлофановый пакет разрезать). Положить несколько ложек сметаны.
        3)Затем кружочки пряников. Выкладывать слоями: слой пряников, банан, сметана, слой пряников, банан и т.д. Залить остатками сметаны. Сметаны не жалейте, вся лишняя влага впитается, останутся очень вкусные прослойки крема.
        4)Пускай постоит ночь в холодильнике. Это важно, так пропитаются пряники, торт приобретет целостность.
        5)Затем с помощью клеенки извлечь торт на блюдо и украсить по своему усмотрению.
        Дополнительная информация: Пряники обязательно должны быть свежие, не дубовые, мягкие. Вместо банана можно использовать ананасы из компота и грецкий орех. Получается очень вкусно. Делается просто. Пряники за ночь становятся похожи на шоколадные коржи. "</string>
    <string name="textsmetannik">"ИНГРЕДИЕНТЫ:
        Сгущенное молоко (1 банка)
        Сахар(100 г)
        Пшеничная мука(8 столовых ложек)
        Сливочное масло(100 г)
        Сметана 20%-ная(½ кг)
        Какао(1 столовая ложка)
        Сода(1 чайная ложка)
        Куриное яйцо(2 штуки)
        Уксу(1 чайная ложка)
        Приготовление:
        1)Сливочное масло комнатной температуры взбейте с яйцами. Добавьте сгущенное молоко и взбейте.
        2)Просейте муку, погасите соду уксусом и добавьте в тесто, тщательно перемешайте.
        3)Готовое тесто разделите на 2 части, в одну часть добавьте какао, перемешайте.
        4)Духовку разогрейте до 180 градусов. Формы смажьте маслом, испеките 2 коржа до готовности (около 20 минут).
        5)Приготовьте крем для торта: сметану с сахаром слегка взбейте.
        6)Готовые коржи разрежьте на 2 части и срежьте боковые части. Все коржи сметанника, кроме нижнего, проколите вилкой, чтобы лучше впитывали в себя крем.
        7)Промажьте все коржи кремом и выложите в виде торта. Обмажьте кремом и боковые части торта 8)\tОбрезки коржей измельчите в крошку и посыпьте ими сметанник. Торт поставьте в холодильник пропитываться на ночь. "</string>
</resources>